﻿v9.9
-----
: Fixed a bug that caused custom wallet amounts not to process correctly


v9.8.1
-----
+ Updated jQuery library to v3.3.1
+ Added the ability to toggle video player fullscreen with double clicks
: Fixed several bugs introduced by jQuery library update
: Fixed multiple bugs caused by Valve retiring their BindTooltips functions
: Fixed a bug that caused some options page elements not to localize correctly
: Fixed a bug where the HD control wasn't added to videos in the store under some circumstances

v9.8
-----
+ Improved performance of inventory market total calculations
: Fixed a bug that caused quick sell and instant sell functions to not work correctly in Firefox
: Fixed a bug that caused wishlist price sorting not to work correctly for some currencies
: Fixed a bug that caused "Activate a product" link to show up in language menu incorrectly
: Fixed a bug that caused multiple product activations dialog to sometimes display incorrectly
: Updated several wishlist-related functions to work with Steam's new page layout
- Removed several wishlist-related functions that were added by Valve

v9.7
-----
+ Added the ability to purchase custom gift cards for any amount over the minimum
+ Added support for additional currencies introduced by Valve
: Fixed a bug that caused platform icons not to show correctly in Firefox
: Fixed a bug with multiple key activations that resulted in an occasional error
: Fixed a bug in the options page formatting validation in Firefox
: Fixed a bug that caused wishlist sorts not to work correctly in some currencies
- Removed option to show wallet balance in header as this was added to Steam by Valve

v9.6
-----
+ Added the ability to activate multiple product codes at once to product activation page
: Improved compatibility with HTTPS Everywhere extension
: Fixed formatting of wishlist numbers on profile pages to match Valve's visual style
: Updated visual style of wishlist pages and made item names on wishlists clickable