@@ -1,6 +1,7 @@
 ﻿v9.9
 -----
 : Fixed a bug that caused custom wallet amounts not to process correctly
+: Fixed numerous broken images that were the result of being served from domains with invalid SSL
 
 
 v9.8.1
